--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 
@@ -14,6 +15,10 @@ h1 {
     padding-top: 40px;
     padding-bottom: 40px;
     text-align: center;
+}
+
+span {
+    color: red;
 }
 
 h3 {
